--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:site" content="@bccsonsol">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" href="/favicon.ico" />
 
     <!-- Tailwind Play CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
